--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 group 'uk.co.electronstudio.mobcontrol'
 version '1.0-SNAPSHOT'
-project.ext.mainClassName = "uk.co.electronstudio.mobcontrol.HttpServer"
+project.ext.mainClassName = "uk.co.electronstudio.mobcontrol.MobTest"
 
 sourceCompatibility = 1.8
 
@@ -16,9 +16,11 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation group: 'org.eclipse.jetty.websocket', name: 'websocket-api', version: '9.4.24.v20191120'
     implementation group: 'org.eclipse.jetty.websocket', name: 'websocket-server', version: '9.4.24.v20191120'
+    compile "com.badlogicgames.gdx:gdx:1.9.9"
+    compile "com.badlogicgames.gdx:gdx-controllers:1.9.9"
 }
 
 task run(dependsOn: classes, type: JavaExec) {
     main = project.mainClassName
-    classpath = sourceSets.main.runtimeClasspath
+    classpath = sourceSets.main.runtimeClasspath + sourceSets.test.runtimeClasspath
 }
