--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,10 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation group: 'org.eclipse.jetty.websocket', name: 'websocket-api', version: '9.4.24.v20191120'
-    implementation group: 'org.eclipse.jetty.websocket', name: 'websocket-server', version: '9.4.24.v20191120'
-    implementation "com.badlogicgames.gdx:gdx:1.9.9"
-    implementation "com.badlogicgames.gdx:gdx-controllers:1.9.9"
+    api group: 'org.eclipse.jetty.websocket', name: 'websocket-api', version: '9.4.24.v20191120'
+    api group: 'org.eclipse.jetty.websocket', name: 'websocket-server', version: '9.4.24.v20191120'
+    api "com.badlogicgames.gdx:gdx:1.9.9"
+    api "com.badlogicgames.gdx:gdx-controllers:1.9.9"
 }
 
 task run(dependsOn: classes, type: JavaExec) {
