--- a/src/main/resources/client/manifest.json
+++ b/src/main/resources/client/manifest.json
@@ -23,5 +23,5 @@
     ],
     "theme_color": "#ffffff",
     "background_color": "#ffffff",
-    "display": "standalone"
+    "display": "fullscreen"
 }
