--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "1.0.0",
   "description": "ESLint dependencies",
   "main": "index.js",
-  "directories": {
-  },
-  "scripts": {
-  },
+  "directories": {},
+  "scripts": {},
   "author": "",
   "license": "ISC",
   "dependencies": {
   },
   "devDependencies": {
+    "doctrine": "^3.0.0",
     "eslint": "^6.7.2",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-html": "^6.0.0",
